[package]
name = "fonny"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "*"
bevy_fly_camera = {path="deps/bevy_fly_camera"}

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1