[package]
name = "fonny"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {path="deps/bevy"}
bevy_fly_camera = {path="deps/bevy_fly_camera"}
noise = "0.7.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1